--- a/partials/main.html
+++ b/partials/main.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{title}} {{#if title}} ⁓ {{/if}} als7</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css"></link>
 </head>
 <body>
-	
+	{{> container}}
 </body>
 </html>
