--- a/style.css
+++ b/style.css
@@ -1,4 +1,85 @@
 html,
 body {
   font-family: Georgia;
+  font-size: 16px;
+}
+body {
+  min-width: 840px;
+  overflow-x: scroll;
+}
+a.basic {
+  color: #000 !important;
+}
+.container {
+  font-family: Georgia;
+  max-width: 700px !important;
+  line-height: 1.5;
+  font-size: 1.14285714rem;
+  position: relative;
+  padding: 1em 0;
+  margin: 0 auto;
+}
+nav {
+  font-size: 34px;
+  letter-spacing: -1px;
+  line-height: 0.75;
+  margin-bottom: 72px;
+}
+nav a {
+  cursor: pointer;
+}
+.menu {
+  position: relative;
+  z-index: 2;
+}
+.als {
+  right: 100%;
+  position: absolute;
+}
+.spam {
+  display: none;
+}
+header {
+  position: relative;
+}
+h1.small {
+  font-size: 1.5em;
+}
+h1 {
+  margin-bottom: 3px;
+}
+h2 {
+  margin-bottom: 0;
+}
+.meta {
+  text-transform: lowercase;
+  color: #aaa;
+}
+.meta.top {
+  position: absolute;
+  letter-spacing: 1px;
+  top: -45px;
+}
+.meta.compact {
+  font-size: 15px;
+}
+.meta.compact > div {
+  display: inline-block;
+}
+.meta.compact > div::before {
+  content: "\00a0| ";
+}
+.meta.compact > div:first-child::before {
+  content: none;
+}
+.meta.padded {
+  padding-top: 1em;
+}
+.meta a {
+  opacity: 0.66;
+}
+.alertify-logs {
+  font-family: "Helvetica Neue", Arial;
+  top: 10px;
+  right: 10px;
 }
