--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-html,
-body {
-  font-family: Georgia;
-  font-size: 16px;
-}
 body {
   min-width: 840px;
   overflow-x: scroll;
@@ -11,7 +6,6 @@ a.basic {
   color: #000 !important;
 }
 .container {
-  font-family: Georgia;
   max-width: 700px !important;
   line-height: 1.5;
   font-size: 1.14285714rem;
@@ -48,6 +42,9 @@ h1.small {
 h1 {
   margin-bottom: 3px;
 }
+h1.bundel {
+  font-size: 2.2rem !important;
+}
 h2 {
   margin-bottom: 0;
 }
@@ -57,8 +54,10 @@ h2 {
 }
 .meta.top {
   position: absolute;
-  letter-spacing: 1px;
   top: -45px;
+}
+.meta.wide {
+  letter-spacing: 1px;
 }
 .meta.compact {
   font-size: 15px;
