--- a/src/style.styl
+++ b/src/style.styl
@@ -1,13 +1,9 @@
-html, body
-	font-family: Georgia
-	font-size: 16px
 body
 	min-width: 840px
 	overflow-x: scroll
 a.basic
 	color: #000 !important
 .container
-	font-family: Georgia;
 	max-width: 700px!important;
 	line-height: 1.5;
 	font-size: 1.14285714rem;
@@ -38,13 +34,16 @@ h1
 	margin-bottom: 3px
 h2
 	margin-bottom: 0
+	&.bundel
+		font-weight: normal
 .meta
 	text-transform: lowercase
 	color: #aaa
 	&.top
 		position: absolute
-		letter-spacing: 1px
 		top: -45px
+	&.wide
+		letter-spacing: 1px
 	&.compact
 		font-size: 15px
 		
