--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -41,7 +41,7 @@ html(lang='en')
 				if titel
 					header
 						h1.small= titel
-						.meta.top
+						.meta.top.wide
 							include meta/datum
 				| !{contents}
 				.meta.compact.padded
