--- a/templates/mensen.jade
+++ b/templates/mensen.jade
@@ -2,6 +2,6 @@ extends layout
 
 block content
 	h1 Mensen
-	for oeuvre in pagination.files
+	for mens in pagination.files
 		h2
-			a(href="/door/" + oeuvre[0].doorUrlSafe)= oeuvre[0].door
+			a(href="/door/" + mens.urlSafe)= mens.naam
