--- a/src/style.styl
+++ b/src/style.styl
@@ -1,5 +1,5 @@
 body
-	min-width: 840px
+	min-width: 820px
 	overflow-x: scroll
 a.basic
 	color: #000 !important
@@ -62,3 +62,5 @@ h2
 	font-family: "Helvetica Neue", Arial
 	top: 10px
 	right: 10px
+#nodebb .topic-profile-pic
+	margin-left: 25px !important
